# riawelc-rs

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.vertex  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: efficientnetb0_baseline.yaml  efficientnetb0_ht_1.yaml  gradcam.yaml  resnet50v2_baseline.yaml  segmentation_unet.yaml  segmentation_unet_augmented.yaml  segmentation_unet_v2.yaml  segmentation_unet_v2_spatial_aug.yaml
demo/: README.md  gradio_app.py
demo/examples/: metadata.json
demo/hf-spaces/: README.md  app.py  requirements.txt
demo/tauri-app/: package-lock.json  package.json  svelte.config.js  vite.config.ts
demo/tauri-app/src/: app.css  app.html
demo/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
demo/tauri-app/src-tauri/capabilities/: default.json
demo/tauri-app/src-tauri/icons/: icon.icns
demo/tauri-app/src-tauri/src/: lib.rs  main.rs
demo/tauri-app/src/lib/: api.ts
demo/tauri-app/src/lib/components/: ConfidenceChart.svelte  HeatmapOverlay.svelte  ImageStatistics.svelte  ImageUpload.svelte  ModelInfo.svelte  (+1 more)
demo/tauri-app/src/routes/: +layout.svelte  +page.svelte
deploy/: README.md  cloudrun.sh
models/: classifier_efficientnetb0_v1.keras  segmentation_unet_v2.keras
scripts/: 00_rename_folders.py  00_resplit_by_radiograph.py  00_resplit_val_test.py  00_verify_splits.py  01_train_classifier.py  02_evaluate_classifier.py  03_generate_gradcam.py  04_generate_pseudomasks.py  05_train_segmentation.py  06_evaluate_segmentation.py  07_export_model.py  api_server.sh  download_models.py  find_clear_examples.py  mlflow_server.sh  preflight_vertex.sh  select_demo_examples.py  submit_vertex_job.py  submit_vertex_segmentation.py  sync_mlflow.sh  upload_to_gcs.sh
src/riawelc/: config.py
src/riawelc/api/: auth.py  dependencies.py  logging_middleware.py  main.py  middleware.py  rate_limit.py  schemas.py  validation.py
src/riawelc/api/routes/: health.py  predict.py  segmentation.py
src/riawelc/data/: __init__.py  augmentation.py  loader.py
src/riawelc/inference/: predictor.py
src/riawelc/models/: __init__.py  classifier.py  export.py  gradcam.py  registry.py  segmentation.py
src/riawelc/training/: callbacks.py  train.py
tests/: conftest.py
tests/test_api/: conftest.py  test_auth.py  test_health.py  test_logging.py  test_predict.py  test_rate_limit.py  test_schemas.py  test_segmentation.py  test_validation.py
tests/test_data/: test_augmentation.py  test_config.py
tests/test_inference/: test_predictor.py
tests/test_models/: test_classifier.py  test_gradcam.py  test_registry.py
tests/test_training/: test_callbacks.py
