[package]
name = "riawelc-inspector"
version = "1.0.0"
description = "RIAWELC Inspector - Welding Defect Inspection Desktop App"
authors = ["Tobias Hoffmann"]
edition = "2021"

[lib]
name = "riawelc_inspector_lib"
crate-type = ["lib"]

[[bin]]
name = "riawelc-inspector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
